first changes for new JDK versions